# deep.sh

./: .authors.yml  .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  FUNDING.yml  README.rst  deepsh-in-docker.py  github_deploy_key.enc  license  pyproject.toml  rever.xsh  run-tests.xsh  setup.cfg  setup.py
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  new-issue.md
.github/workflows/: docs.yml  publish.yml  test.yml
appimage/: README.rst  entrypoint.sh  xonsh.appdata.xml  xonsh.desktop
completions/: _xonsh.py  cd.py  gh.py  pip.py  rmdir.py
contrib/: README.rst  coreutils.py
deepsh/: __main__.py  aliases.py  ansi_colors.py  built_ins.py  cli_utils.py  codecache.py  color_tools.py  commands_cache.py  completer.py  config.py  contexts.py  contribs.py  dirstack.py  environ.py  events.py  execer.py  foreign_shells.py  imphooks.py  lazyasd.py  lazyimps.py  lazyjson.py  main.py  parser.py  platform.py  pyghooks.py  shell.py  style_tools.py  timings.py  tools.py  tracer.py  wizard.py
deepsh/api/: README.md  __init__.py  os.py  subprocess.py
deepsh/completers/: _aliases.py  base.py  bash.py  bash_completion.py  commands.py  completer.py  environment.py  imports.py  init.py  man.py  path.py  python.py  tools.py
deepsh/coreutils/: _which.py  cat.py  echo.py  pwd.py  tee.py  tty.py  ulimit.py  umask.py  uname.py  uptime.py  util.py  which.py  yes.py
deepsh/history/: base.py  diff_history.py  dummy.py  json.py  main.py  sqlite.py
deepsh/lib/: README.md  __init__.py  inspectors.py  jsonutils.py  lazyasd.py  lazyimps.py  modules.py  openpy.py  os.py  pretty.py  subprocess.py
deepsh/parsers/: __init__.py  ast.py  base.py  completion_context.py  context_check.py  fstring_adaptor.py  lexer.py  tokenize.py  v310.py  v313.py  v36.py  v38.py  v39.py
deepsh/parsers/ply/: ctokens.py  lex.py
deepsh/procs/: __init__.py  executables.py  jobs.py  pipelines.py  posix.py  proxies.py  readers.py  specs.py
deepsh/prompt/: base.py  cwd.py  env.py  gitstatus.py  job.py  times.py  vc.py
deepsh/pytest/: plugin.py  tools.py
deepsh/shells/: __init__.py  base_shell.py  dumb_shell.py  readline_shell.py
deepsh/shells/ptk_shell/: __init__.py  completer.py  formatter.py  history.py  key_bindings.py  updator.py
deepsh/virtualenv/: __init__.py  activate.xsh
deepsh/webconfig/: __main__.py  file_writes.py  index.html  main.py  routes.py  xonsh_data.py
docs/: Makefile  advanced_events.rst  aliases.rst  appimage.rst  bash_to_xsh.rst  comparison.rst  conf.py  contact.rst  containers.rst  contents.rst  contributing.rst  customization.rst  editors.rst  envvars.rst.jinja2  events.rst  faq.rst  guides.rst  installation.rst  intro.rst  keyboard_shortcuts.rst  links.rst  packages.rst  platform-issues.rst  python-versions-support-policy.rst  python_virtual_environments.rst  quotes.rst  setup.rst  subproc_types.rst  talks_and_articles.rst  todo.rst  tryitnow.rst  tutorial.rst  tutorial_completers.rst  tutorial_events.rst  tutorial_hist.rst  tutorial_history_backend.rst  tutorial_macros.rst  tutorial_ptk.rst  tutorial_subproc_strings.rst  tutorial_xonsh_projects.rst  (+5 more)
docs/_static/landing/animate-css/: wow.min.js
docs/_static/landing/css/: style.css.map
docs/_static/landing/isotope/: imagesloaded.pkgd.min.js  isotope-min.js
docs/_static/landing/js/: bootstrap.min.js  popper.js
docs/_static/landing/owl-carousel/: owl.carousel.min.js
docs/_static/landing2/js/: bootstrap.js  jquery-3.js  magnific-popup.js  owl.js  popper.js  validator.js
docs/_templates/: index.html
docs/api/: index.rst
docs/extensions/: cmdhelp.py
scripts/: xon.sh  xonsh.ps1
tests/: conftest.py  test_aliases.py  test_ansi_colors.py  test_builtins.py  test_cli_utils.py  test_color_tools.py  test_commands_cache.py  test_completer.py  test_completion_context.py  test_contexts.py  test_dirstack.py  test_dirstack_unc.py  test_environ.py  test_events.py  test_execer.py  test_foreign_shells.py  test_imphooks.py  test_integrations.py  test_main.py  test_man.py  test_pyghooks.py  test_tools.py  test_virtualenv_activator.py  test_xonsh.xsh
tests/aliases/: test_completer_alias.py  test_source.py  test_xexec.py
tests/api/: test_os.xsh  test_subprocess.xsh
tests/built_ins/: test_tracer.py  test_wizard.py  test_xonfig.py  test_xontribs.py
tests/completers/: test_base_completer.py  test_bash_completer.py  test_command_completers.py  test_completer_command.py  test_dir_completers.py  test_environment_completer.py  test_gh.py  test_path_completers.py  test_pip_completer.py  test_python.py  test_xompletions.py
tests/history/: test_history_dummy.py  test_history_json.py  test_history_sqlite.py
tests/history/histories/: echo.json  simple-python.json
tests/lib/: test_collections.py  test_itertools.py  test_jsonutils.py  test_lazyasd.py  test_lazyjson.py  test_pretty.py
tests/parsers/: test_ast.py  test_lexer.py  test_parser.py
tests/platform/: test_platform.py
tests/procs/: test_executables.py  test_jobs.py  test_pipelines.py  test_specs.py
tests/prompt/: test_base.py  test_cwd.py  test_gitstatus.py  test_vc.py
tests/shell/: test_base_shell.py  test_ptk_completer.py  test_ptk_highlight.py  test_ptk_history.py  test_ptk_multiline.py  test_ptk_shell.py  test_readline_shell.py  test_shell.py
tests/xoreutils/: test_cat.py  test_uname.py  test_uptime.py  test_which.py
